# user-service

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  tox.ini
src/: main.py
src/users/: config.py  module.py
src/users/api/controllers/: __init__.py  base.py  health_controller.py  role_controller.py  schemas.py  token_controller.py  user_controller.py
src/users/api/middlewares/: access_scopes.py
src/users/controllers/: __init__.py  base.py  schemas.py  token_controller.py  user_controller.py
src/users/core/access/: __init__.py  access_user.py  actor.py  repository.py
src/users/core/domain/: permission.py  role.py  token.py  user.py
src/users/core/roles/: __init__.py  repository.py  schemas.py  services.py
src/users/core/services/: access.py  token_repository.py  token_services.py  user_repository.py  user_services.py
src/users/core/shared/: __init__.py  id.py  uuid.py
src/users/core/tokens/: __init__.py  repository.py  schemas.py  services.py
src/users/core/users/: __init__.py  repository.py  schemas.py  services.py
src/users/db/: __init__.py  token_repository.py  user_repository.py
src/users/infrastructure/db/: __init__.py  base.py  orm.py  role_repository.py  token_repository.py  user_repository.py
src/users/middlewares/: access_scopes.py
src/users/migrations/: env.py
src/users/migrations/versions/: 20250126_1601_74b4cff45ac3_initial_schema.py  20250207_2233_ccd552b49a8b_initial_schema.py  20250208_2054_1fb3d8fc2f92_add_soft_delete_capability.py  20250212_1435_6de16db1b738_split_permission_table.py  (+1 more)
(+16 files in other folders)
